# maintenance

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  llms.txt  pyproject.toml
.github/workflows/: release.yml  test.yml
demo/: record.sh
docs/: reusable-patterns.md
src/mac_upkeep/: cli.py  config.py  defaults.toml  git_sync.py  notify.py  output.py  tasks.py
src/maintenance/: cli.py  config.py  defaults.toml  notify.py  output.py  tasks.py
tests/: test_cli.py  test_config.py  test_git_sync.py  test_notify.py  test_output.py  test_tasks.py
