[project]
name = "maintenance"
version = "1.0.0"
description = "Automated macOS maintenance CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]

[project.scripts]
maintenance = "maintenance.cli:app"

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maintenance"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
