[project]
name = "mac-upkeep"
version = "2.0.0"
description = "Automated macOS maintenance CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]
authors = [{name = "Calvin", url = "https://github.com/calvindotsg"}]
keywords = ["macos", "maintenance", "homebrew", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/calvindotsg/maintenance"
Repository = "https://github.com/calvindotsg/maintenance"
Issues = "https://github.com/calvindotsg/maintenance/issues"
Changelog = "https://github.com/calvindotsg/maintenance/blob/main/CHANGELOG.md"

[project.scripts]
mac-upkeep = "mac_upkeep.cli:app"

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_upkeep"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
