[project]
name = "mac-upkeep"
version = "2.4.1"
description = "Automated macOS maintenance CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]
authors = [{name = "Calvin"}]
keywords = ["macos", "maintenance", "homebrew", "cli", "automation", "system-administration", "developer-tools", "cache-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/calvindotsg/mac-upkeep"
Repository = "https://github.com/calvindotsg/mac-upkeep"
Issues = "https://github.com/calvindotsg/mac-upkeep/issues"
Changelog = "https://github.com/calvindotsg/mac-upkeep/blob/main/CHANGELOG.md"

[project.scripts]
mac-upkeep = "mac_upkeep.cli:app"

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_upkeep"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
